--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -50,11 +50,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4369028002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4369028002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999692162894-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999692162894-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -155,7 +155,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYBm9fwO'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYBm9fwO'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -218,7 +218,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691511538-speech-and-language-pathologist'>Uncommon Schools Speech and Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UncommonSchools/743999691511538-speech-and-language-pathologist'>Uncommon Schools Speech and Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -230,7 +230,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-symbria.icims.com/jobs/3881/speech-language-pathologist---slp---prn---home-health/job'>Speech Language Pathologist - SLP - PRN - Home Health in ...</a></h5> 
+<h5><a href='https://careers-symbria.icims.com/jobs/3881/speech-language-pathologist---slp---prn---home-health/job'>Speech Language Pathologist - SLP - PRN - Home Health in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Marquardt Home and Community Based Services Inc is now hiring a Speech 
 Language Pathologist - SLP - PRN - Home Health in Watertown, Wisconsin.</p>
@@ -386,7 +386,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
+<h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -438,11 +438,11 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lifemark-health/job/oIyoafwy'>Lifemark Health Group Careers - Speech Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/lifemark-health/job/oIyoafwy'>Lifemark Health Group Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -454,7 +454,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/bmcmahon/job/5sd94zif9o6yrx1bzwhsm4hcxw/Speech_Therapist_Home_Health_Per_Diem_CA'>Per Diem - Home Health Speech Therapist | Brian McMahon &amp; Associates</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/bmcmahon/job/5sd94zif9o6yrx1bzwhsm4hcxw/Speech_Therapist_Home_Health_Per_Diem_CA'>Per Diem - Home Health Speech Therapist | Brian McMahon &amp; Associates</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
