--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -71,7 +71,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
@@ -92,7 +92,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -174,7 +174,7 @@ believe a workplace food program is something employees should love and look
 developing and implementing metrics and reporting to improve our business and
 ?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -190,7 +190,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -211,7 +211,7 @@ developing and implementing metrics and reporting to improve our business and
 <p>4 days ago ... Dorilton Capital is looking for a Business Intelligence/Data Warehouse (BI/DW) 
 Solutions Architect to design and build the firm's Data Warehouse and Business?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -254,7 +254,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://crisistextline.workable.com/j/F49D17A64D'>Crisis Text Line - Jobs: Business Intelligence Data Scientist, Community Team - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/F49D17A64D'>Crisis Text Line - Jobs: Business Intelligence Data Scientist, Community Team - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -311,7 +311,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/wp-engine/job/oCBv9fwB'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/wp-engine/job/oCBv9fwB'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -319,7 +319,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -417,7 +417,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4355910002'>Job Application for Graduate Business Intelligence Analyst at Ocado</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4355910002'>Job Application for Graduate Business Intelligence Analyst at Ocado</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -433,7 +433,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://columbia.referrals.selectminds.com/jobs/business-intelligence-bi-engineer-7889'>Business Intelligence (BI) Engineer - Columbia Sportswear Company Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://columbia.referrals.selectminds.com/jobs/business-intelligence-bi-engineer-7889'>Business Intelligence (BI) Engineer - Columbia Sportswear Company Careers</a></h5> 
 <p><span class="badge badge-light">United States, Oregon, Portland</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
